# libgssapi

./: .gitignore  CHANGELOG  CLAUDE.md  Cargo.toml  README.md
doc/libc/: constant.B1000000.html  constant.B1152000.html  constant.B1200.html  constant.B200.html  constant.B230400.html  constant.B300.html  constant.B4000000.html  constant.B4800.html  constant.B57600.html  constant.B600.html  constant.B75.html  constant.B921600.html  constant.B9600.html  constant.BS1.html  constant.BSDLY.html  constant.CBAUD.html  constant.CR1.html  constant.CR2.html  constant.CRDLY.html  constant.CS6.html  constant.CS8.html  constant.CSIZE.html  constant.EADDRINUSE.html  constant.EADV.html  constant.EALREADY.html  constant.EBADFD.html  constant.EBADRQC.html  constant.EBFONT.html  constant.ECANCELED.html  constant.ECHOCTL.html  constant.ECHOE.html  constant.ECHONL.html  constant.ECONNREFUSED.html  constant.ECONNRESET.html  constant.EDESTADDRREQ.html  constant.EHOSTDOWN.html  constant.EISNAM.html  constant.EKEYEXPIRED.html  constant.EL2HLT.html  constant.ELIBBAD.html  (+317 more)
doc/libgssapi_sys/: all.html  constant.GSS_C_ACCEPT.html  constant.GSS_C_AF_APPLETALK.html  constant.GSS_C_AF_DATAKIT.html  constant.GSS_C_AF_DECnet.html  constant.GSS_C_AF_DSS.html  constant.GSS_C_AF_LAT.html  constant.GSS_C_AF_NS.html  constant.GSS_C_AF_PUP.html  constant.GSS_C_AF_SNA.html  constant.GSS_C_AF_UNSPEC.html  constant.GSS_C_AF_X25.html  constant.GSS_C_CALLING_ERROR_OFFSET.html  constant.GSS_C_DELEG_FLAG.html  constant.GSS_C_DELEG_POLICY_FLAG.html  constant.GSS_C_GSS_CODE.html  constant.GSS_C_INITIATE.html  constant.GSS_C_INTEG_FLAG.html  constant.GSS_C_MECH_CODE.html  constant.GSS_C_PRF_KEY_FULL.html  constant.GSS_C_PROT_READY_FLAG.html  constant.GSS_C_SEQUENCE_FLAG.html  constant.GSS_S_DUPLICATE_TOKEN.html  constant.GSS_S_OLD_TOKEN.html  constant.GSS_S_UNSEQ_TOKEN.html  constant._GSS_S_CONTINUE_NEEDED.html  constant._GSS_S_DEFECTIVE_TOKEN.html  constant._GSS_S_NO_CONTEXT.html  fn.gss_acquire_cred.html  fn.gss_add_oid_set_member.html  fn.gss_canonicalize_name.html  fn.gss_compare_name.html  fn.gss_context_time.html  fn.gss_create_empty_oid_set.html  fn.gss_delete_sec_context.html  fn.gss_duplicate_name.html  fn.gss_export_name_object.html  fn.gss_export_sec_context.html  fn.gss_get_mic.html  fn.gss_import_name_object.html  (+48 more)
doc/parking_lot/: struct.RawMutex.html  struct.RawRwLock.html  struct.RawThreadId.html  struct.WaitTimeoutResult.html
doc/parking_lot_core/: enum.FilterOp.html  enum.ParkResult.html  struct.UnparkResult.html  struct.UnparkToken.html
docs/: aliases.js  search-index.js  settings.html  source-files.js
docs/libc/: all.html  constant.B0.html  constant.B1000000.html  constant.B110.html  constant.B115200.html  constant.B1152000.html  constant.B1200.html  constant.B134.html  constant.B150.html  constant.B1500000.html  constant.B1800.html  constant.B19200.html  constant.B200.html  constant.B2000000.html  constant.B230400.html  constant.B2400.html  constant.B2500000.html  constant.B300.html  constant.B3000000.html  constant.B3500000.html  constant.B38400.html  constant.B4000000.html  constant.B460800.html  constant.B4800.html  constant.B50.html  constant.B500000.html  constant.B57600.html  constant.B576000.html  constant.B600.html  constant.B75.html  constant.B921600.html  constant.B9600.html  constant.BOTHER.html  constant.BS1.html  constant.BSDLY.html  constant.CBAUD.html  constant.CBAUDEX.html  constant.CLOCAL.html  constant.CR1.html  constant.CR2.html  (+661 more)
docs/libgssapi/: all.html  index.html  sidebar-items.js
docs/libgssapi_sys/: all.html  constant.GSS_C_ACCEPT.html  constant.GSS_C_AF_APPLETALK.html  constant.GSS_C_AF_BSC.html  constant.GSS_C_AF_CCITT.html  constant.GSS_C_AF_CHAOS.html  constant.GSS_C_AF_DATAKIT.html  constant.GSS_C_AF_DECnet.html  constant.GSS_C_AF_DLI.html  constant.GSS_C_AF_DSS.html  constant.GSS_C_AF_ECMA.html  constant.GSS_C_AF_HYLINK.html  constant.GSS_C_AF_IMPLINK.html  constant.GSS_C_AF_INET.html  constant.GSS_C_AF_LAT.html  constant.GSS_C_AF_LOCAL.html  constant.GSS_C_AF_NBS.html  constant.GSS_C_AF_NETBIOS.html  constant.GSS_C_AF_NS.html  constant.GSS_C_AF_NULLADDR.html  constant.GSS_C_AF_OSI.html  constant.GSS_C_AF_PUP.html  (+257 more)
libgssapi/: CHANGELOG  Cargo.toml
libgssapi-sys/: Cargo.toml  build.rs  consts.h  wrapper.h
libgssapi-sys/src/: lib.rs  wrapper_apple.h  wrapper_heimdal.h  wrapper_mit.h
libgssapi/examples/: krb5.rs  krb5_auth.rs  krb5_iov.rs
libgssapi/src/: context.rs  credential.rs  error.rs  lib.rs  name.rs  oid.rs  util.rs
libgssapi/tests/: cred.rs  krb5_mutual_auth.rs
libgssapi/tests/common/: mod.rs
testgss/: Cargo.toml
tests/: test.sh
(+245 files in other folders)
