[package]
name = "libgssapi-sys"
version = "0.1.2"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A low level binding to gssapi"
homepage = "https://github.com/estokes/libgssapi"
documentation = "https://docs.rs/libgssapi"
repository = "https://github.com/estokes/libgssapi"
keywords = ["gssapi", "sspi", "kerberos", "krb5", "authentication"]
categories = ["api-bindings", "authentication", "cryptography", "os::unix-apis"]
links = "gssapi_krb5"

[build-dependencies]
bindgen = "0.53"
