[package]
name = "libgssapi"
version = "0.8.2"
authors = ["Eric Stokes <letaris@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A safe binding to gssapi"
homepage = "https://github.com/estokes/libgssapi"
readme = "../README.md"
documentation = "https://estokes.github.io/libgssapi/libgssapi/index.html"
repository = "https://github.com/estokes/libgssapi"
keywords = ["gssapi", "sspi", "kerberos", "krb5", "authentication"]
categories = ["api-bindings", "authentication", "cryptography", "os::unix-apis"]

[features]
default = ["iov", "localname"]
iov = []
s4u = []
localname = []

[dependencies]
bytes = "1"
libgssapi-sys = { version = "0.3.1", path = "../libgssapi-sys" }
bitflags = "2.0"
lazy_static = "1.4"
